--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ nes (18 sloc)  310 Bytes
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
 /backend/node_modules
 /frontend/node_modules
 /.pnp
 .pnp.js
-
+.env
+/backend/.env
 # testing
 /coverage
 
